[package]
name = "sea-orm-tool"
version = "0.0.1"
edition = "2021"
description = "A tool library for extending and enhancing the functionality of sea-orm, a powerful ORM library for Rust."
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
sea-orm = { version = "0.12" }
